Fix errors & improving classes